# serverless-app-sunil

./: .gitignore  README.md
.github/workflows/: pipeline.yml
common_services/log-forwarder/app/log_forwarder/: lambda_function.py  requirements.txt
common_services/log-forwarder/infra/: app.py
common_services/log-forwarder/infra/stack/: log_forwarder_stack.py
common_services/log-forwarder/infra/tests/unit/: test_log_forwarder_stack.py
serverless-labs/: 00-overview-and-prerequisites.md  01-day1-foundations.md  02-day2-advanced-patterns.md  03-day3-containers-databases-patterns.md  03b-day3-eks-app-runner-patterns.md  04-github-actions-cicd.md  05-enabling-blue-green-deployment.md  06-observability.md  07-cloudwatch_observability.md
services/ai-doc-processor/app/orchestrator/: Dockerfile  lambda_function.py  requirements.txt
services/ai-doc-processor/infra/: app.py
services/ai-doc-processor/infra/stack/: ai_doc_processor_stack.py
services/ai-doc-processor/infra/tests/unit/: test_ai_doc_processor_stack.py
services/invoice-notifier/app/notifier/: Dockerfile  lambda_function.py
services/invoice-notifier/infra/: app.py
services/invoice-notifier/infra/stack/: invoice_notifier_stack.py
services/invoice-notifier/infra/tests/unit/: test_invoice_notifier_stack.py
shared/: pyproject.toml  requirements.txt
shared/constructs_lib/: base_lambda_stack.py
